@@ -151,3 +151,85 @@ src/Database/Data/Database.sqlite
 temp.csv
 Servers/**/node_modules/
 Servers/**/package-lock.json
+release-dev/builder-debug.yml
+release-dev/builder-effective-config.yaml
+release-dev/latest.yml
+release-dev/SelfHost Helper Dev Setup 0.4.1.exe
+release-dev/SelfHost Helper Dev Setup 0.4.1.exe.blockmap
+release-dev/win-unpacked/chrome_100_percent.pak
+release-dev/win-unpacked/chrome_200_percent.pak
+release-dev/win-unpacked/d3dcompiler_47.dll
+release-dev/win-unpacked/dxcompiler.dll
+release-dev/win-unpacked/dxil.dll
+release-dev/win-unpacked/ffmpeg.dll
+release-dev/win-unpacked/icudtl.dat
+release-dev/win-unpacked/libEGL.dll
+release-dev/win-unpacked/libGLESv2.dll
+release-dev/win-unpacked/LICENSE.electron.txt
+release-dev/win-unpacked/LICENSES.chromium.html
+release-dev/win-unpacked/resources.pak
+release-dev/win-unpacked/SelfHost Helper Dev.exe
+release-dev/win-unpacked/snapshot_blob.bin
+release-dev/win-unpacked/v8_context_snapshot.bin
+release-dev/win-unpacked/vk_swiftshader_icd.json
+release-dev/win-unpacked/vk_swiftshader.dll
+release-dev/win-unpacked/vulkan-1.dll
+release-dev/win-unpacked/locales/af.pak
+release-dev/win-unpacked/locales/am.pak
+release-dev/win-unpacked/locales/ar.pak
+release-dev/win-unpacked/locales/bg.pak
+release-dev/win-unpacked/locales/bn.pak
+release-dev/win-unpacked/locales/ca.pak
+release-dev/win-unpacked/locales/cs.pak
+release-dev/win-unpacked/locales/da.pak
+release-dev/win-unpacked/locales/de.pak
+release-dev/win-unpacked/locales/el.pak
+release-dev/win-unpacked/locales/en-GB.pak
+release-dev/win-unpacked/locales/en-US.pak
+release-dev/win-unpacked/locales/es-419.pak
+release-dev/win-unpacked/locales/es.pak
+release-dev/win-unpacked/locales/et.pak
+release-dev/win-unpacked/locales/fa.pak
+release-dev/win-unpacked/locales/fi.pak
+release-dev/win-unpacked/locales/fil.pak
+release-dev/win-unpacked/locales/fr.pak
+release-dev/win-unpacked/locales/gu.pak
+release-dev/win-unpacked/locales/he.pak
+release-dev/win-unpacked/locales/hi.pak
+release-dev/win-unpacked/locales/hr.pak
+release-dev/win-unpacked/locales/hu.pak
+release-dev/win-unpacked/locales/id.pak
+release-dev/win-unpacked/locales/it.pak
+release-dev/win-unpacked/locales/ja.pak
+release-dev/win-unpacked/locales/kn.pak
+release-dev/win-unpacked/locales/ko.pak
+release-dev/win-unpacked/locales/lt.pak
+release-dev/win-unpacked/locales/lv.pak
+release-dev/win-unpacked/locales/ml.pak
+release-dev/win-unpacked/locales/mr.pak
+release-dev/win-unpacked/locales/ms.pak
+release-dev/win-unpacked/locales/nb.pak
+release-dev/win-unpacked/locales/nl.pak
+release-dev/win-unpacked/locales/pl.pak
+release-dev/win-unpacked/locales/pt-BR.pak
+release-dev/win-unpacked/locales/pt-PT.pak
+release-dev/win-unpacked/locales/ro.pak
+release-dev/win-unpacked/locales/ru.pak
+release-dev/win-unpacked/locales/sk.pak
+release-dev/win-unpacked/locales/sl.pak
+release-dev/win-unpacked/locales/sr.pak
+release-dev/win-unpacked/locales/sv.pak
+release-dev/win-unpacked/locales/sw.pak
+release-dev/win-unpacked/locales/ta.pak
+release-dev/win-unpacked/locales/te.pak
+release-dev/win-unpacked/locales/th.pak
+release-dev/win-unpacked/locales/tr.pak
+release-dev/win-unpacked/locales/uk.pak
+release-dev/win-unpacked/locales/ur.pak
+release-dev/win-unpacked/locales/vi.pak
+release-dev/win-unpacked/locales/zh-CN.pak
+release-dev/win-unpacked/locales/zh-TW.pak
+release-dev/win-unpacked/resources/app-update.yml
+release-dev/win-unpacked/resources/app.asar
+release-dev/win-unpacked/resources/elevate.exe
+release-dev/win-unpacked/resources/icon.png
