@@ -1,40 +1,40 @@
-import js from "@eslint/js";
-import globals from "globals";
+// import js from "@eslint/js";
+// import globals from "globals";
 
-import reactRefresh from "eslint-plugin-react-refresh";
-import reactHooks from "eslint-plugin-react-hooks";
+// import reactRefresh from "eslint-plugin-react-refresh";
+// import reactHooks from "eslint-plugin-react-hooks";
 
-export default [
-  //   js.configs.recommended,
-  js.configs.recommended,
-  reactHooks.configs.flat.recommended,
-  reactRefresh.configs.vite,
-  {
-    ignores: ["node_modules/**", "dist/**", "build/**", "out/**", "release/**"],
-  },
-  {
-    files: ["src/**/*.{js,jsx}"],
+// export default [
+//   //   js.configs.recommended,
+//   js.configs.recommended,
+//   reactHooks.configs.flat.recommended,
+//   reactRefresh.configs.vite,
+//   {
+//     ignores: ["node_modules/**", "dist/**", "build/**", "out/**", "release/**"],
+//   },
+//   {
+//     files: ["src/**/*.{js,jsx}"],
 
-    languageOptions: {
-      ecmaVersion: 2020,
-      globals: globals.browser,
-    },
-  },
+//     languageOptions: {
+//       ecmaVersion: 2020,
+//       globals: globals.browser,
+//     },
+//   },
 
-  {
-    files: ["electron/**/*.js", "preload/**/*.js"],
-    languageOptions: {
-      ecmaVersion: "latest",
-      sourceType: "module",
-      globals: {
-        ...globals.node,
-      },
-    },
-    rules: {
-      "no-console": "off",
-      eqeqeq: "error",
-      curly: "error",
-      "no-unused-vars": ["warn", { argsIgnorePattern: "^_" }],
-    },
-  },
-];
+//   {
+//     files: ["electron/**/*.js", "preload/**/*.js"],
+//     languageOptions: {
+//       ecmaVersion: "latest",
+//       sourceType: "module",
+//       globals: {
+//         ...globals.node,
+//       },
+//     },
+//     rules: {
+//       "no-console": "off",
+//       eqeqeq: "error",
+//       curly: "error",
+//       "no-unused-vars": ["warn", { argsIgnorePattern: "^_" }],
+//     },
+//   },
+// ];
